# llm-providers-mcp

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LLM-Providers-MCP-Build-Runbook.md  README.md  SECURITY.md  pyproject.toml
.claude/commands/: askGemini.md  askGeminiPro.md  askOpenAI.md  askOpenAIPro.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  ci.yml.example
servers/: README.md
servers/gemini_mcp/: client.py  server.py
servers/openai_mcp/: agent.py  server.py
shared/: errors.py  formatting.py  secrets.py
tests/: test_shared.py
